--- a/pom.xml
+++ b/pom.xml
@@ -22,5 +22,6 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <describe>16</describe>
     </properties>
 </project>
